package MainPackage;

import java.io.IOException;

public class Main {

    static Interface  ui = new Interface();

    public static void main(String[] args) throws IOException {
        ui.inputFromUser();
    }
}
